plugins {
    id "application"
}

mainClassName = "ui10.Main6"

compileJava {
    sourceCompatibility = "17"
    targetCompatibility = "17"
    options.compilerArgs.add("--enable-preview")
    options.compilerArgs.add("--add-modules")
    options.compilerArgs.add("jdk.incubator.foreign")
}

run {
    jvmArgs(['--enable-preview', '-ea'])
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
